# Myzdin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format_file.sh  manual_install_sdl2.md  meson.build  run.sh  tidy-project.sh
src/: level.h  main.c
src/boundaries/: boundaries.c  boundaries.h
src/collision/: collision.c  collision.h
src/game_play/: game_play.c  game_play.h
src/ground/: ground.c  ground.h
src/keybindings/: keybindings.c  keybindings.h
src/pch/: myzdin-pch.h
src/player/: player.c  player.h
src/scene/: scene.c  scene.h
src/scrolling/: scrolling.c  scrolling.h
